Project new name added, css adde, login page html create

--- a/css/style.css
+++ b/css/style.css
@@ -2,607 +2,42 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Merriweather:ital,wght@0,300;0,700;0,900;1,700&display=swap');
 
-body
- {margin : 0;
+/* universal selector", matches any element on a page. It selects all elements in the HTML*/
+
+* {
+  margin: 0;
   padding: 0;
-  font-family: "Fjalla One", "Arial", "Helvetica", sans-serif;
-  font-weight: lighter;
-  font-kerning: auto;
-  color: #3a3a3a;
- }
-
- p {font-family: "Merriweather", "Times New Roman", "Times", serif;
-    font-size:large;
-    font-kerning: auto;
+  box-sizing: border-box;
 }
 
-@media only screen and (max-width: 800px) 
-{p {font-size:larger
-    }
-}
-
-@media only screen and (max-width: 400px) 
-{p {font-size: medium;
-   }
-}
-
-nav ul {
-list-style: none;
-background-color:#E35A01;
-text-align: right;
-padding:0;
-margin: 2px;
-}
-
-nav li {
-font-size: 2.5vw;
-line-height: 35px;
-height: 35px;
-display:inline-block;
-margin-bottom: 1.8%;
-margin-top: 1.8%;
-margin-right: 2%;
-}
-
-
-nav a {
-text-decoration: none;
-font-weight: bold;
-text-transform: uppercase;
-color:white;
-display:inline-block;
-margin-left:0px;
-letter-spacing: 1.5px;
-}
-
-/* Change color when hover */
-nav a:hover { 
-color:#0048A4
- }
-
-article {margin-left:20px;
-}
-
-.logo1 {
-    position: relative;
-    float: left;
-    width: 90%;
-    max-width: 310px;
-    height: auto;
-  }
-
-
-header {
-    float: left;
-    display: flex;
-    margin-left: 10px;
-    margin-top:10px
+body {
+    background-color: #009101;
+    background-image: radial-gradient(circle at 50% 50%, #009101, #009100, #009200, #009300);
+    height: 100vh;
 }  
 
-/* slider ID on Home page. Multiple YT tutorials used*/
-#sliderhero {overflow: hidden;} 
-
-#sliderhero figure {
-    position:relative;
-    width:500%;
-    margin:0;
-    padding-bottom: 15px;
-    padding-top:5px;
-    left:0;
-    animation: 30s sliderhero infinite
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
 
-#sliderhero figure img{ 
-    width: 12%;
-    float:left;
+.logo-container img {
+  width: 200px;
 }
 
-@keyframes sliderhero
-{0% {left:0%;} /*1 photo*/
-10% {left:0%;} /*1 photo*/
-24% {left:-50%;} /*2 photo*/
-32% {left:-50%;} /*2 photo*/
-42% {left:-100%;} /*3 photo*/
-49% {left:-100%;} /*3 photo*/
-55% {left:-150%;} /*4 photo*/
-61% {left:-150%;} /*4 photo*/
-69% {left:-230%;} /*5 photo*/
-76% {left:-230%;} /*5 photo*/
-85% {left:-270%} /*6 photo*/
-91% {left:-270%} /*6 photo*/
-96% {left:-325%} /*7 photo*/
-99% {left:-325%} /*7 photo*/
-100% {left:0%}
+.buttons-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.quote {
-    font-size: 3vw;
-    color:whitesmoke;
-    background-color: #3a3a3a;
-    text-align: center;
-    margin-bottom: 20px;
-    width: 100%;
-    height:7vw; 
-    line-height: 7vw;
-    }
-
-    @media only screen and (max-width: 500px) 
-{.quote {
-    font-size: 3.5vw;
-    line-height:10vw;
-    height:10vw;}
-}
-
-.container {
-    padding: 1.5rem;
-    background-color: whitesmoke;
-}
-.cell {padding: 2rem;
-    background-color: white;}
-
-hr {
-    height:5px; 
-    margin-bottom: 10px; 
-    width:40%;
-    background-color:#E35A01;
-    text-align: left;
-}
-
-.headercell_1 {
-    background-color: #E35A01;
-    color: whitesmoke;
-    padding:5px;
-}
-
-.headercell_2 {
-    background-color: #0048A4;
-    color: whitesmoke;
-    padding:5px;
-    }
-
-.cell-img {
-    padding:0;
-    background-color: whitesmoke;
-}
-
-.image-in-cell {
-    width: 100%;
-    max-width: 700px;
-    height: auto;
-}
-
-.grid {
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2rem;
-}
-
-@media only screen and (max-width: 800px) 
-{.grid {
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;}
-}
-
-@media only screen and (max-width: 400px) 
-{.grid {
-    display:grid;
-    grid-template-columns: 1fr;
-    gap: 1rem;}
-}
-
-h1 {
-    font-size: 2vw;
-    color: whitesmoke ;
-    background-color: #E35A01;
-    text-align: center;
-    margin-bottom: 20px;
-    width: 100%;
-    height:5vw; 
-    line-height: 5vw;
-  }
-
-  @media only screen and (max-width: 400px) 
-{h1 {
-    height:15vw; 
-    font-size: 4vw;
-    line-height: 15vw;
-}
-}
- 
-
-  .grid2 {
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 0.5rem;
-}
-
-@media only screen and (max-width: 800px) 
-{.grid2 {
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0.4rem;}
-}
-
-@media only screen and (max-width: 400px) 
-{.grid2 {
-    display:grid;
-    grid-template-columns: 1fr;
-    gap: 0.2rem;}
-}
-
-figure {
-    width: 100%;
-    margin: 0;
-    display: inline-block;
-      }
-
-figcaption {
-        text-align: center;
-      }
-
-      figcaption h2 {
-        text-transform: uppercase;
-        display: inline-block;
-        letter-spacing: -1.6px;
-        margin: 5px ; }
-
-        @media only screen and (max-width: 800px) 
-        {figcaption h2 {
-        letter-spacing:normal;}
-           }     
-
-figcaption h3 {
-    font-style: italic;
-    margin-top: 0.5px;
-}        
-
-/* "Find Out More" buttons styling */
-
-      figcaption a {
-        background: #0048A4;
-        font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-        text-decoration: none;
-        color: whitesmoke;
-        display: inline-block;
-        margin-bottom: 15px;
-        border-radius: 3px;
-        padding: 8px; }
-    
-       
-    
-        figcaption a:hover { 
-        color:#E35A01;
-             }
-    
-    /* this code belowe was partialy copied from YouTube tutorial video, 
-    I modified this code to fit the website design */
-      
-      .hover-animation {
-        position: relative;
-        height: 15vw;
-        width: 15vw;
-        margin: 1% auto 0;
-        color: #fff;
-       }
-      
-      .hover-animation img {
-        position: absolute;
-        left: 0;
-        width: 15vw;
-        height: 15vw;
-        -webkit-transition: opacity 0.5s ease-in-out;
-        -moz-transition: opacity 0.5s ease-in-out;
-        -ms-transition: opacity 0.5s ease-in-out;
-        -o-transition: opacity 0.5s ease-in-out;
-        transition: opacity 0.5s ease-in-out;
-      }
-      
-      @media only screen and (max-width: 800px) 
-      {.hover-animation {
-          height: 47vw;
-          width: 47vw; }
-         }
-
-      @media only screen and (max-width: 800px) 
-      {.hover-animation img {
-          height: 47vw;
-          width: 47vw; }
-         }
-    
-      
-       @media only screen and (max-width: 400px) 
-        {.hover-animation {
-            height: 53vw;
-            width: 53vw; }
-            }
-
-        @media only screen and (max-width: 400px) 
-        {.hover-animation img {
-            height: 53vw;
-            width: 53vw; }
-           }
-
-
-      .hover-animation img.img-front:hover{
-        opacity:0;
-        cursor: pointer; }
-
-.photowalks-p { 
-    background-color: whitesmoke;
-    padding: 50px;
-    margin: 40px;
-    font-kerning: auto;
-
-}
-
-.icon {
-    float: left;
-    width: 20%;
-    position: relative;
-    padding-right: 15px;
-    padding-top: 15px;
-    padding-bottom: 10px;
-    transition: transform 0.6s;
-}
-
-/*zoom effect - pretty useless but looks cool :D */
-.icon:hover {
-    -ms-transform: scale(1.1); 
-    -webkit-transform: scale(1.1); 
-    transform: scale(1.1); 
-  }
-
-
-/*Forms styling
-=========================*/
-
-fieldset {
-    width: 70%;
-    margin: auto;
-}
-
-legend {
-    margin: 20px;
-    font-size: 2.5vw;
-
-}
-
-input[type=text],
-input[type=email]
- {
-    width: 98%;
-    font-size: 25px;
-    border: 2px solid #E35A01;
-    border-radius: 4px;
-    resize: vertical;
-    padding: 5px;
-    margin: 3px;
-
-}
-
-input[type=radio]
-{ margin-left: 20px;
-    accent-color: #E35A01;}
-
-/*this code below add style to the cameras field but I was not able to style the dropdown list*/
-
- input[name="cameras_brands"] {
-        border: 2px solid #E35A01;
-        border-radius: 4px;
-        font-size: 25px;
-        padding: 5px;
-        width: 70%;
-      }
-      
-
-input::placeholder { 
-    font-family: "Fjalla One";
-    color: #3a3a3a;
-    font-size: 1.8vw;
-    text-align: center;
-    opacity: 0.8;
-    text-transform:capitalize;
-}
-
-label {
-   font-size: 2vw;
-  
-}
-
-    input[type=submit]
- {
-    background: #E35A01;
-    font-size:25px;
-    font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    border-radius: 3px;
-    border: none;
-    width: 130px;
-    color: whitesmoke;
-    display: inline-block;
-    margin-top: 8px;
-    padding: 8px; } 
-
-    .submit:hover {
-        
-    box-shadow: 0 0 6px #0048A4;
-    color: #0048A4; }
-
-
-input[type=reset] {
-    font-size:25px;
-    font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    border: none;
-    border-radius: 3px;
-    width: 130px;
-    margin-top: 8px;
-    padding: 8px; } 
-
-.reset:hover {
-        
-box-shadow: 0 0 6px #E35A01;
-color: #E35A01; }
-
-
-.center-row {
-    text-align: center;
-}
-
-
-/*this class name can be missleding, I was not able style the button itself,
-only the label to the right*/
-
-#upload-button {
-    font-size: 16px;
-    color: #E35A01;
-    font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-}
-
-#orange-header {
-    color: #E35A01;
-    text-align:start;
-   } 
-    
-
-   /*Footer styling 
-   ================== */
-
-footer {
-background-color: #E35A01;
-color: whitesmoke;
-padding: 15px;
-height: 45px;
-line-height: 45px;
-margin:2px
-}
-
-footer #footer-div-left {
-    display: block;
-    float: left;
-    
-}
-footer #footer-div-left a {
-    text-decoration: none;
-    font-size: 35px;
-    color: whitesmoke; 
-    font-weight: bold;
-    text-transform: uppercase;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-@media only screen and (max-width: 300px) 
-{ footer #footer-div-left a {
-    font-size: 25px;}
-}
-
-    footer #footer-div-left a:hover {
-        color:#0048A4;
-    }
-
-
-/*Gallery page styling
-===================*/
-
-.gallery-masonry{
-    max-width: 85%;
-    margin:20px auto;
-  }
-
-  .gallery-masonry {
-    font-size: 25px;
-    background-color:whitesmoke;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    text-align: center;
-    padding:15px;
-  }
-  
-  .gallery-masonry .image-container{
-    columns:3;
-    gap:6px;
-  }
-  
-  .gallery-masonry .image-container img{
-    margin-bottom: 2px;
-    margin-top: 15px;
-    
-    border-radius: 3px;
-    width: 100%;
-  }
-
-  .image-container :hover {
-    -ms-transform: scale(1.01); 
-    -webkit-transform: scale(1.01); 
-    transform: scale(1.01); }
-
-    /*media query for gallery layout */
-  
-
-    @media only screen and (max-width: 800px) 
-    {.gallery-masonry .image-container {
-        columns:2;
-        gap:2px;}
-  }
-
-
-  @media only screen and (max-width: 400px) 
-    {.gallery-masonry .image-container {
-        columns:1;
-        gap:1px;}
-  }
-
-  /* Gallery Images caption styling */
-
-  .figcaption-gallery {
-    
-    color: #E35A01;
-    background-color: whitesmoke;
-    padding:2px ;
-    max-width: 400px;
-    font-size: 15px;
-    display: block;
-    float:left;
-    position: relative;
-    top: -38px;
-  }
-
-  @media only screen and (max-width: 400px) 
-  {.figcaption-gallery {
-        max-width: 400px;
-        font-size: 12px;
-  }
-}
-
-
-/*code copied from w3schools.com I could not figured out how force this iframe to be in center
-and responsive*/
-.iframe-container {
-  background-color: whitesmoke;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 56.25%;
-  text-align: center;
-}
-
-.responsive-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: auto;
-    right: 0;
-    width: 80%;
-    height: 100%;
-    margin: auto;
-  }
-
-  .image-top-banner {
-    width: 100%;
-    max-width: 1700px;
-    height: auto;
-  }
-
-  
+.login-button,
+.register-button {
+  padding: 1rem 2rem;
+  border: 2px solid #000;
+  border-radius: 25px;
+  font-size: 1.2rem;
+  font-family: 'Fjalla One', sans-serif;
+  text-transform: u
