--- a/_OLD_FILES/TruePeakWeatherApp copy/templates/index.html
+++ b/_OLD_FILES/TruePeakWeatherApp copy/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Lucas M Czajkowski">
     <meta name="desription" content="Weather app is designed specifically for hikers, providing them with up-to-date weather information to help plan their adventure.">
     <meta name="keywords" content="weather, ireland, mountains, hiking">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="TruePeakWeatherApp/static/css/style.css">
     <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675772427/hiking%20weather%20app%20-%20project%204/logo_true_peak_favicon_hldqih.jpg">
     <title>True Peak - weather for hikers </title>
     
